# notes

./: .gitignore  README.md  package-lock.json  package.json
backend/: Cargo.toml  Rocket.toml
backend/src/: main.rs
backend/src/api/: account.rs  database.rs
backend/src/structs/: account.rs  mod.rs
src/components/: note.astro
src/layouts/: layout.astro
src/pages/: index.astro
src/pages/auth/: login.astro  signup.astro
src/styles/: global.css
